Edit: 'location.href' ➡️ 'window.open'

--- a/cybersec.html
+++ b/cybersec.html
@@ -156,7 +156,7 @@
               </p>
               <button
                 type="button"
-                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/vulnerability.md'"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/vulnerability.md')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
@@ -184,7 +184,7 @@
               </p>
               <button
                 type="button"
-                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/writeups.md'"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/writeups.md')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
@@ -214,7 +214,7 @@
               </p>
               <button
                 type="button"
-                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/awesometools.md'"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/awesometools.md')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
@@ -244,7 +244,7 @@
               </p>
               <button
                 type="button"
-                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/forbeginner.md'"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/forbeginner.md')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
