--- a/cybersec.html
+++ b/cybersec.html
@@ -256,7 +256,7 @@
         </div>
       </div>
 
-      <!--------------- types section ends here --------------->
+      <!--------------- content info section ends here --------------->
 
       <!--------------- footer starts here --------------->
       <div id="footer"></div>
