--- a/activities.html
+++ b/activities.html
@@ -270,7 +270,7 @@
           <div class="row">
             <div class="col-lg-12">
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-user-check"></i> Summit Activities
+                <i class="fas fa-user-check"></i> Join Activities
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เมื่อคุณ
