--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </head>
 
   <body>
-    <!-- Messenger Plugin -->
+    <!-- messenger plugin -->
     <div id="msg-plugin"></div>
 
     <div id="loader"></div>
