--- a/common/footer.html
+++ b/common/footer.html
@@ -54,6 +54,8 @@
                 <i class="fab fa-facebook-messenger"></i>
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-discord"></i>
+                |
+                <i class="fa-solid fa-envelope"></i>
               </p>
             </li>
           </ul>
@@ -62,7 +64,7 @@
             type="button"
             onclick="location.href='termsofservice.html'"
           >
-            <i class="fas fa-info-circle"></i> ข้อกำหนด นโยบายความเป็นส่วนตัว
+            <i class="fas fa-info-circle"></i> Terms of service
           </p>
         </div>
       </div>
