--- a/activities.html
+++ b/activities.html
@@ -79,11 +79,38 @@
   </head>
 
   <body>
-    <!-- messenger plugin -->
-    <div id="msg-plugin"></div>
+    <!-- Messenger ปลั๊กอินแชท Code -->
+    <div id="fb-root"></div>
 
+    <!-- Your ปลั๊กอินแชท code -->
+    <div id="fb-customer-chat" class="fb-customerchat"></div>
+
+    <script>
+      var chatbox = document.getElementById("fb-customer-chat");
+      chatbox.setAttribute("page_id", "202287595164031");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: "v13.0",
+        });
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/th_TH/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
     <div id="loader"></div>
-
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
@@ -243,7 +270,7 @@
           <div class="row">
             <div class="col-lg-12">
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-user-check"></i> Join Activities
+                <i class="fas fa-user-check"></i> Summit Activities
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เมื่อคุณ
@@ -309,6 +336,91 @@
           <i class="fas fa-check-circle"></i> ยอมรับ
         </button>
         <br />
+      </div>
+
+      <div
+        id="social"
+        class="modal fade"
+        role="dialog"
+        data-backdrop="static"
+        data-keyboard="false"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content ripple1">
+            <div class="modal-header">
+              <h4 class="modal-title rainbowText">
+                <i class="fas fa-handshake"></i> Join us!
+              </h4>
+            </div>
+            <div class="modal-body">
+              <button
+                type="button"
+                onclick="location.href='https://m.me/TNICybersec'"
+                class="btn btn-outline-dark btn-lg btn-block"
+              >
+                <i class="fab fa-facebook-messenger"></i> TNI Cybersec
+              </button>
+              </br>
+              <button
+                type="button"
+                onclick="location.href='https://fb.me/TNICybersec'"
+                class="btn btn-outline-dark btn-lg btn-block"
+              >
+                <i class="fab fa-facebook"></i> TNI Cybersec
+              </button>
+              </br>
+              <button
+                type="button"
+                onclick="location.href='https://discord.gg/ETMkrHSGZG'"
+                class="btn btn-outline-dark btn-lg btn-block"
+              >
+                <i class="fab fa-discord"></i> TNI Cybersec
+              </button>
+  
+  
+              <hr>
+              <h4 class="tooltip-contact">
+                    <i class="fa-solid fa-envelope"></i> Email
+              </h4>
+              <a>
+                    <i class="fa-solid fa-envelope"> </i> pranisa@tni.ac.th
+              </a>
+              </br>
+  
+              <button
+                type="button"
+                onclick="location.href='mailto: pranisa@tni.ac.th'"
+                class="btn btn-outline-dark btn-lg btn-block"
+              >
+                <i class="fa-solid fa-envelope"></i> pranisa@tni.ac.th
+              </button>  
+              
+              <a>
+               <i class="fa-solid fa-envelope"> </i> tniinfo@tni.ac.th
+              </a>
+              </br>
+  
+              <button
+                type="button"
+                onclick="location.href='mailto: tniinfo@tni.ac.th'"
+                class="btn btn-outline-dark btn-lg btn-block"
+              >
+                <i class="fa-solid fa-envelope"></i> tniinfo@tni.ac.th
+              </button>
+            </div>
+            
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-outline-light btn-danger btn-lg btn-block fadeInUp"
+                data-toggle="modal"
+                data-dismiss="modal"
+              >
+                <i class="far fa-times-circle"></i> Close
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div
@@ -396,9 +508,7 @@
           </div>
         </div>
 
-        <div id="cookie-banner"></div>
-
-        <!-- javascript -->
+        <script src="js/cookie.js"></script>
         <script src="js/script.js"></script>
 
         <!-- greensock cdn -->
@@ -410,6 +520,50 @@
             $("#myModal").modal("show");
             $("#myModal").modal({ backdrop: "static", keyboard: false });
           });
+
+          var loader;
+
+          function loadNow(opacity) {
+            if (opacity <= 0) {
+              displayContent();
+            } else {
+              loader.style.opacity = opacity;
+              window.setTimeout(function () {
+                loadNow(opacity - 0.05);
+              }, 50);
+            }
+          }
+
+          function displayContent() {
+            loader.style.display = "none";
+            document.getElementById("content").style.display = "block";
+          }
+
+          document.addEventListener("DOMContentLoaded", function () {
+            loader = document.getElementById("loader");
+            loadNow(1);
+          });
+          // nav animation
+
+          TweenMax.from("#brand", 1, {
+            delay: 0.4,
+            y: 10,
+            opacity: 0,
+            ease: Expo.easeInOut,
+          });
+
+          TweenMax.staggerFrom(
+            "#menu li a",
+            1,
+            {
+              delay: 0.4,
+              opacity: 0,
+              ease: Expo.easeInOut,
+            },
+            0.1
+          );
+
+          // nav animation ends
 
           new WOW().init();
 
