--- a/termsofservice.html
+++ b/termsofservice.html
@@ -69,11 +69,39 @@
   </head>
 
   <body>
-    <!-- messenger plugin -->
-    <div id="msg-plugin"></div>
+    <!-- Messenger ปลั๊กอินแชท Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your ปลั๊กอินแชท code -->
+    <div id="fb-customer-chat" class="fb-customerchat"></div>
+
+    <script>
+      var chatbox = document.getElementById("fb-customer-chat");
+      chatbox.setAttribute("page_id", "202287595164031");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: "v13.0",
+        });
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/th_TH/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
 
     <div id="loader"></div>
-
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
@@ -110,18 +138,18 @@
             <div class="col-lg-12">
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fas fa-server"></i>
-                ข้อตกลงด้านข้อมูลและด้านความเป็นส่วนตัว
+                ข้อตกลงด้านข้อมูลและด้านความเป็นส่วนตัว(PDPA) 
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                1.ทางเราจะไม่เก็บข้อมูลส่วนตัวของท่าน
+                1.ทางเราจะไม่เก็บข้อมูลส่วนตัวของท่านแต่อย่างไร
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 2.ทางเราจะไม่เปิดเผยข้อมูลตามความสมัครใจของท่านเป็นรายบุคคล
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                3.ทางเราอาจล้างลิสต์ข้อมูลในอดีตได้ตามความเหมาะสม
+                3.ทางเราจะล้างข้อมูลในอดีตได้ตามความเหมาะสมหรือเมื่อคุณร้องขอ
               </p>
-              <br />
+              <br/>
 
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fab fa-creative-commons"></i>
@@ -129,22 +157,20 @@
                 <i class="fab fa-creative-commons-share"></i> CC-BY
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                CC-BY อนุญาตให้ผู้อื่นทำซ้ำ แจกจ่าย
-                หรือแสดงและนำเสนอชิ้นงานดังกล่าว
-                และสร้างงานดัดแปลงจากชิ้นงานดังกล่าว
-                ได้เฉพาะกรณีที่ได้แสดงเครดิตตามที่ระบุไว้
-                <br />
+                CC-BY อนุญาตให้ผู้อื่นทำซ้ำ แจกจ่าย หรือแสดงและนำเสนอชิ้นงานดังกล่าว
+                และสร้างงานดัดแปลงจากชิ้นงานดังกล่าวได้เฉพาะกรณีที่ได้แสดงเครดิตตามที่ระบุไว้
+                <br/>
               </p>
             </div>
           </div>
-
+          <br/>
           <div class="row">
             <div class="col-lg-12">
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="far fa-window-maximize"></i> Web Information
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                <i class="fas fa-cogs"></i> 2.2.1
+                <i class="fas fa-cogs"></i> 4.0.2
                 <span class="badge badge-warning">2022 BETA</span>
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
@@ -200,9 +226,92 @@
       <br />
     </div>
 
-    <div id="cookie-banner"></div>
+    <div
+      id="social"
+      class="modal fade"
+      role="dialog"
+      data-backdrop="static"
+      data-keyboard="false"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content ripple1">
+          <div class="modal-header">
+            <h4 class="modal-title rainbowText">
+              <i class="fas fa-handshake"></i> Join us!
+            </h4>
+          </div>
+          <div class="modal-body">
+            <button
+              type="button"
+              onclick="location.href='https://m.me/TNICybersec'"
+              class="btn btn-outline-dark btn-lg btn-block"
+            >
+              <i class="fab fa-facebook-messenger"></i> TNI Cybersec
+            </button>
+            </br>
+            <button
+              type="button"
+              onclick="location.href='https://fb.me/TNICybersec'"
+              class="btn btn-outline-dark btn-lg btn-block"
+            >
+              <i class="fab fa-facebook"></i> TNI Cybersec
+            </button>
+            </br>
+            <button
+              type="button"
+              onclick="location.href='https://discord.gg/ETMkrHSGZG'"
+              class="btn btn-outline-dark btn-lg btn-block"
+            >
+              <i class="fab fa-discord"></i> TNI Cybersec
+            </button>
 
-    <!-- javascript -->
+
+            <hr>
+            <h4 class="tooltip-contact">
+                  <i class="fa-solid fa-envelope"></i> Email
+            </h4>
+            <a>
+                  <i class="fa-solid fa-envelope"> </i> pranisa@tni.ac.th
+            </a>
+            </br>
+
+            <button
+              type="button"
+              onclick="location.href='mailto: pranisa@tni.ac.th'"
+              class="btn btn-outline-dark btn-lg btn-block"
+            >
+              <i class="fa-solid fa-envelope"></i> pranisa@tni.ac.th
+            </button>  
+            
+            <a>
+             <i class="fa-solid fa-envelope"> </i> tniinfo@tni.ac.th
+            </a>
+            </br>
+
+            <button
+              type="button"
+              onclick="location.href='mailto: tniinfo@tni.ac.th'"
+              class="btn btn-outline-dark btn-lg btn-block"
+            >
+              <i class="fa-solid fa-envelope"></i> tniinfo@tni.ac.th
+            </button>
+          </div>
+          
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-outline-light btn-danger btn-lg btn-block fadeInUp"
+              data-toggle="modal"
+              data-dismiss="modal"
+            >
+              <i class="far fa-times-circle"></i> Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/cookie.js"></script>
     <script src="js/script.js"></script>
 
     <!-- greensock cdn -->
@@ -212,6 +321,51 @@
       $(function () {
         $("#contact").modal({ backdrop: "static", keyboard: false });
       });
+
+      var loader;
+
+      function loadNow(opacity) {
+        if (opacity <= 0) {
+          displayContent();
+        } else {
+          loader.style.opacity = opacity;
+          window.setTimeout(function () {
+            loadNow(opacity - 0.05);
+          }, 50);
+        }
+      }
+
+      function displayContent() {
+        loader.style.display = "none";
+        document.getElementById("content").style.display = "block";
+      }
+
+      document.addEventListener("DOMContentLoaded", function () {
+        loader = document.getElementById("loader");
+        loadNow(1);
+      });
+
+      // nav animation
+
+      TweenMax.from("#brand", 1, {
+        delay: 0.4,
+        y: 10,
+        opacity: 0,
+        ease: Expo.easeInOut,
+      });
+
+      TweenMax.staggerFrom(
+        "#menu li a",
+        1,
+        {
+          delay: 0.4,
+          opacity: 0,
+          ease: Expo.easeInOut,
+        },
+        0.1
+      );
+
+      // nav animation ends
 
       new WOW().init();
     </script>
