--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="TNI Cybersec" content="404" />
 
-    <title>404</title>
+    <title>404 Page not found</title>
 
     <!-- stylesheet -->
     <!-- stylesheet -->
@@ -90,22 +90,34 @@
             <h1 class="wow fadeInUp" data-wow-delay="0.1s">
               404 Page not found
             </h1>
-            <h1 class="wow fadeInUp" data-wow-delay="0.1s">😖😖😖</h1>
-            <h3 class="wow fadeInUp" data-wow-delay="0.3s">
-              Never gonna give you up.
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-delay="0.3s">
-              Never gonna let you down.
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-delay="0.3s">
-              Never gonna run around and desert you.
-            </h3>
+            <h1 class="wow fadeInUp" data-wow-delay="0.2s">
+              <audio controls autoplay loop>
+                <source src="NeverGonnaGiveYouUp.mp3" type="audio/mpeg">
+             </audio>
+            </h1>
+            <h6 class="wow fadeInUp" data-wow-delay="0.3s">
+             🎵🎵🎵
+            </h6>
+            <h6 class="wow fadeInUp" data-wow-delay="0.4s">
+              Never gonna give you up
+            </h6>
+            <h6 class="wow fadeInUp" data-wow-delay="0.5s">
+              Never gonna let you down
+            </h6>
+            <h6 class="wow fadeInUp" data-wow-delay="0.6s">
+              Never gonna run around and desert you
+            </h6>
+            <h6 class="wow fadeInUp" data-wow-delay="0.7s">
+              🎵🎵🎵
+            </h6>
+         
           </div>
         </div>
       </div>
     </div>
+    
     <!--------------- hero section ends here --------------->
-
+<!--
     <div class="cookie-container">
       <br />
       <h3><i class="fas fa-cookie-bite"></i> We use cookies.</h3>
@@ -128,7 +140,7 @@
       </button>
       <br />
     </div>
-
+-->
     <script src="js/cookie.js"></script>
     <script src="js/script.js"></script>
 
