Fix 404.html in 4.0.2

--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
               404 Page not found
             </h1>
             <h1 class="wow fadeInUp" data-wow-delay="0.2s">
-              <audio controls autoplay loop>
+              <audio  autoplay controls loop>
                 <source src="NeverGonnaGiveYouUp.mp3" type="audio/mpeg">
              </audio>
             </h1>
