--- a/common/navbar.html
+++ b/common/navbar.html
@@ -72,7 +72,14 @@
   </ul>
 </div>
 
+
+
+<div id="joinus"></div>
+
 <script>
+  $("#joinus").load("common/social-card.html");
+
+
   $("#toggle").click(function () {
     $(this).toggleClass("on");
     $("#resize").toggleClass("active");
