--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="TNI Cybersec" content="Home" />
 
     <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="img/TNICyberWebIcon.png" />
-    <meta property="og:description" content="Hello World!" />
+    <meta property="og:image" content="img/CyberPic.jpg" />
+    <meta property="og:description" content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก" />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="TNI Cybersec" />
-    <meta name="twitter:image" content="img/TNICyberWebIcon.png" />
-    <meta name="twitter:description" content="Hello World!" />
+    <meta name="twitter:image" content="img/CyberPic.jpg" />
+    <meta name="twitter:description" content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
     <title>TNI Cybersec</title>
