--- a/termsofservice.html
+++ b/termsofservice.html
@@ -8,13 +8,13 @@
     <meta name="TNI Cybersec" content="Terms of service" />
 
     <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="img/TNICyberWebIcon.png" />
+    <meta property="og:image" content="img/CyberPic.jpg" />
     <meta property="og:description" content="Terms of service" />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="TNI Cybersec" />
-    <meta name="twitter:image" content="img/TNICyberWebIcon.png" />
+    <meta name="twitter:image" content="img/CyberPic.jpg" />
     <meta name="twitter:description" content="Terms of service" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
