Format with Prettier

--- a/cybersec.html
+++ b/cybersec.html
@@ -91,7 +91,8 @@
                 <i class="fas fa-user-ninja"></i> Cybersec
               </h1>
               <p class="wow fadeInUp user-select-none" data-wow-delay="0.5s">
-                หัวข้อในด้านต่างๆในด้านของ Cyber Securityที่เราได้รวบรวมและจัดหมวดหมู่ไว้ให้แล้ว
+                หัวข้อในด้านต่างๆในด้านของ Cyber
+                Securityที่เราได้รวบรวมและจัดหมวดหมู่ไว้ให้แล้ว
               </p>
             </div>
           </div>
@@ -232,7 +233,7 @@
       <div id="footer"></div>
       <!--------------- footer ends here --------------->
 
-      <br/>
+      <br />
 
       <div id="cookie-banner"></div>
       <script src="js/script.js"></script>
