--- a/404.html
+++ b/404.html
@@ -91,13 +91,11 @@
               404 Page not found
             </h1>
             <h1 class="wow fadeInUp" data-wow-delay="0.2s">
-              <audio  autoplay controls loop>
-                <source src="NeverGonnaGiveYouUp.mp3" type="audio/mpeg">
-             </audio>
+              <audio autoplay controls loop>
+                <source src="NeverGonnaGiveYouUp.mp3" type="audio/mpeg" />
+              </audio>
             </h1>
-            <h6 class="wow fadeInUp" data-wow-delay="0.3s">
-             🎵🎵🎵
-            </h6>
+            <h6 class="wow fadeInUp" data-wow-delay="0.3s">🎵🎵🎵</h6>
             <h6 class="wow fadeInUp" data-wow-delay="0.4s">
               Never gonna give you up
             </h6>
@@ -107,15 +105,12 @@
             <h6 class="wow fadeInUp" data-wow-delay="0.6s">
               Never gonna run around and desert you
             </h6>
-            <h6 class="wow fadeInUp" data-wow-delay="0.7s">
-              🎵🎵🎵
-            </h6>
-         
+            <h6 class="wow fadeInUp" data-wow-delay="0.7s">🎵🎵🎵</h6>
           </div>
         </div>
       </div>
     </div>
-    
+
     <script src="js/script.js"></script>
 
     <!-- greensock cdn -->
