--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 
     <meta property="og:title" content="TNI Cybersec" />
     <meta property="og:image" content="img/CyberPic.jpg" />
-    <meta property="og:description" content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก" />
+    <meta
+      property="og:description"
+      content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก"
+    />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="TNI Cybersec" />
     <meta name="twitter:image" content="img/CyberPic.jpg" />
-    <meta name="twitter:description" content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก" />
+    <meta
+      name="twitter:description"
+      content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก"
+    />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
     <title>TNI Cybersec</title>
@@ -98,7 +104,7 @@
       <br />
 
       <h6 class="wow fadeInUp" data-wow-delay="0.2s">
-      <i class="fas fa-user-ninja"></i> わたしはだれ？
+        <i class="fas fa-user-ninja"></i> わたしはだれ？
       </h6>
 
       <div class="vertical wow fadeInUp"></div>
@@ -178,9 +184,6 @@
     <!--------------- footer ends here --------------->
 
     <br />
-
-
-    
 
     <div id="cookie-banner"></div>
     <script src="js/script.js"></script>
