--- a/termsofservice.html
+++ b/termsofservice.html
@@ -71,7 +71,7 @@
   <body>
     <!-- Messenger ปลั๊กอินแชท Code -->
     <div id="msg-plugin"></div>
-    
+
     <div id="loader"></div>
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
@@ -109,7 +109,7 @@
             <div class="col-lg-12">
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fas fa-server"></i>
-                ข้อตกลงด้านข้อมูลและด้านความเป็นส่วนตัว(PDPA) 
+                ข้อตกลงด้านข้อมูลและด้านความเป็นส่วนตัว(PDPA)
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 1.ทางเราจะไม่เก็บข้อมูลส่วนตัวของท่านแต่อย่างไร
@@ -120,7 +120,7 @@
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 3.ทางเราจะล้างข้อมูลในอดีตได้ตามความเหมาะสมหรือเมื่อคุณร้องขอ
               </p>
-              <br/>
+              <br />
 
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fab fa-creative-commons"></i>
@@ -128,13 +128,14 @@
                 <i class="fab fa-creative-commons-share"></i> CC-BY
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                CC-BY อนุญาตให้ผู้อื่นทำซ้ำ แจกจ่าย หรือแสดงและนำเสนอชิ้นงานดังกล่าว
+                CC-BY อนุญาตให้ผู้อื่นทำซ้ำ แจกจ่าย
+                หรือแสดงและนำเสนอชิ้นงานดังกล่าว
                 และสร้างงานดัดแปลงจากชิ้นงานดังกล่าวได้เฉพาะกรณีที่ได้แสดงเครดิตตามที่ระบุไว้
-                <br/>
+                <br />
               </p>
             </div>
           </div>
-          <br/>
+          <br />
           <div class="row">
             <div class="col-lg-12">
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
@@ -171,7 +172,7 @@
       <div id="footer"></div>
       <!--------------- footer ends here --------------->
 
-      <br/>
+      <br />
     </div>
 
     <script src="js/script.js"></script>
