Fix broken tags

--- a/common/social-card.html
+++ b/common/social-card.html
@@ -1,84 +1,79 @@
 <div
-      id="social"
-      class="modal fade"
-      role="dialog"
-      data-backdrop="static"
-      data-keyboard="false"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content ripple1">
-          <div class="modal-header">
-            <h4 class="modal-title rainbowText">
-              <i class="fas fa-handshake"></i> Join us!
-            </h4>
-          </div>
-          <div class="modal-body">
-            <button
-              type="button"
-              onclick="window.open('https://m.me/TNICybersec')"
-              class="btn btn-outline-dark btn-lg btn-block"
-            >
-              <i class="fab fa-facebook-messenger"></i> TNI Cybersec
-            </button>
-            </br>
-            <button
-              type="button"
-              onclick="window.open('https://fb.me/TNICybersec')"
-              class="btn btn-outline-dark btn-lg btn-block"
-            >
-              <i class="fab fa-facebook"></i> TNI Cybersec
-            </button>
-            </br>
-            <button
-              type="button"
-              onclick="window.open('https://discord.gg/ETMkrHSGZG')"
-              class="btn btn-outline-dark btn-lg btn-block"
-            >
-              <i class="fab fa-discord"></i> TNI Cybersec
-            </button>
+  id="social"
+  class="modal fade"
+  role="dialog"
+  data-backdrop="static"
+  data-keyboard="false"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content ripple1">
+      <div class="modal-header">
+        <h4 class="modal-title rainbowText">
+          <i class="fas fa-handshake"></i> Join us!
+        </h4>
+      </div>
+      <div class="modal-body">
+        <button
+          type="button"
+          onclick="window.open('https://m.me/TNICybersec')"
+          class="btn btn-outline-dark btn-lg btn-block"
+        >
+          <i class="fab fa-facebook-messenger"></i> TNI Cybersec
+        </button>
+        <br />
+        <button
+          type="button"
+          onclick="window.open('https://fb.me/TNICybersec')"
+          class="btn btn-outline-dark btn-lg btn-block"
+        >
+          <i class="fab fa-facebook"></i> TNI Cybersec
+        </button>
+        <br />
+        <button
+          type="button"
+          onclick="window.open('https://discord.gg/ETMkrHSGZG')"
+          class="btn btn-outline-dark btn-lg btn-block"
+        >
+          <i class="fab fa-discord"></i> TNI Cybersec
+        </button>
 
+        <hr />
+        <h4 class="tooltip-contact">
+          <i class="fa-solid fa-envelope"></i> Email
+        </h4>
+        <a> <i class="fa-solid fa-envelope"> </i> pranisa@tni.ac.th </a>
+        <br />
 
-            <hr>
-            <h4 class="tooltip-contact">
-                  <i class="fa-solid fa-envelope"></i> Email
-            </h4>
-            <a>
-                  <i class="fa-solid fa-envelope"> </i> pranisa@tni.ac.th
-            </a>
-            </br>
+        <button
+          type="button"
+          onclick="location.href='mailto: pranisa@tni.ac.th'"
+          class="btn btn-outline-dark btn-lg btn-block"
+        >
+          <i class="fa-solid fa-envelope"></i> pranisa@tni.ac.th
+        </button>
 
-            <button
-              type="button"
-              onclick="location.href='mailto: pranisa@tni.ac.th'"
-              class="btn btn-outline-dark btn-lg btn-block"
-            >
-              <i class="fa-solid fa-envelope"></i> pranisa@tni.ac.th
-            </button>  
-            
-            <a>
-             <i class="fa-solid fa-envelope"> </i> tniinfo@tni.ac.th
-            </a>
-            </br>
+        <a> <i class="fa-solid fa-envelope"> </i> tniinfo@tni.ac.th </a>
+        <br />
 
-            <button
-              type="button"
-              onclick="location.href='mailto: tniinfo@tni.ac.th'"
-              class="btn btn-outline-dark btn-lg btn-block"
-            >
-              <i class="fa-solid fa-envelope"></i> tniinfo@tni.ac.th
-            </button>
-          </div>
+        <button
+          type="button"
+          onclick="location.href='mailto: tniinfo@tni.ac.th'"
+          class="btn btn-outline-dark btn-lg btn-block"
+        >
+          <i class="fa-solid fa-envelope"></i> tniinfo@tni.ac.th
+        </button>
+      </div>
 
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-outline-light btn-danger btn-lg btn-block fadeInUp"
-              data-toggle="modal"
-              data-dismiss="modal"
-            >
-              <i class="far fa-times-circle"></i> Close
-            </button>
-          </div>
-        </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-outline-light btn-danger btn-lg btn-block fadeInUp"
+          data-toggle="modal"
+          data-dismiss="modal"
+        >
+          <i class="far fa-times-circle"></i> Close
+        </button>
       </div>
     </div>
+  </div>
+</div>
