Add margin bottom

--- a/common/social-card.html
+++ b/common/social-card.html
@@ -47,11 +47,10 @@
         <button
           type="button"
           onclick="location.href='mailto: pranisa@tni.ac.th'"
-          class="btn btn-outline-dark btn-lg btn-block"
+          class="btn btn-outline-dark btn-lg btn-block mb-2"
         >
           <i class="fa-solid fa-envelope"></i> pranisa@tni.ac.th
         </button>
-
         <a> <i class="fa-solid fa-envelope"> </i> tniinfo@tni.ac.th </a>
         <br />
 
