Add component comments

--- a/404.html
+++ b/404.html
@@ -62,7 +62,9 @@
   </head>
 
   <body>
+    <!-- loader -->
     <div id="loader"></div>
+    
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <nav>
