--- a/cybersec.html
+++ b/cybersec.html
@@ -69,10 +69,12 @@
   </head>
 
   <body>
-    <!-- Messenger ปลั๊กอินแชท Code -->
+    <!-- messenger plugin -->
     <div id="msg-plugin"></div>
 
+    <!-- loader -->
     <div id="loader"></div>
+    
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
@@ -236,7 +238,7 @@
       <br />
 
       <div id="cookie-banner"></div>
-      
+
       <!-- javascript -->
       <script src="js/script.js"></script>
 
