--- a/index.html
+++ b/index.html
@@ -75,16 +75,18 @@
   </head>
 
   <body>
+    <!-- messenger plugin -->
     <div id="msg-plugin"></div>
 
+    <!-- loader -->
     <div id="loader"></div>
+
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
       <!--------------- navbar ends here --------------->
 
       <!--------------- hero section starts here --------------->
-
       <div rel="preload" as="image" class="bgimg wow fadeInUp black">
         <div class="hero">
           <div class="header">
