--- a/activities.html
+++ b/activities.html
@@ -79,10 +79,12 @@
   </head>
 
   <body>
-    <!-- Messenger ปลั๊กอินแชท Code -->
+    <!-- messenger plugin -->
     <div id="msg-plugin"></div>
 
+    <!-- loader -->
     <div id="loader"></div>
+    
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
