--- a/activities.html
+++ b/activities.html
@@ -164,7 +164,7 @@
               <p class="wow fadeInUp" data-wow-delay="0.5s"></p>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 <span class="badge badge-pill list2"
-                  ><i class="far fa-bell ripple2"></i> Latest update</span
+                  ><i class="far fa-bell ripple2"></i> Latest Update</span
                 >
                 <i class="fas fa-calendar-day"></i> <span id="time"></span>
                 <i class="fas fa-hourglass-half"> </i>
@@ -363,7 +363,7 @@
                   </p>
                   <p>
                     <span class="badge badge-warning"
-                      ><i class="far fa-bell ripple2"></i> Lasted Update
+                      ><i class="far fa-bell ripple2"></i> Latest Update
                     </span>
                     <i class="fas fa-calendar-day"></i> <span id="time2"></span>
                     <i class="fas fa-hourglass-half"> </i>
