Edit: "About Me" ➡️ "About Us"

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#000000" />
-    <meta name="TNI Cybersec" content="About Me" />
+    <meta name="TNI Cybersec" content="About Us" />
 
     <meta property="og:title" content="TNI Cybersec" />
     <meta property="og:image" content="img/CyberPic.jpg" />
-    <meta property="og:description" content="About Me" />
+    <meta property="og:description" content="About Us" />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="TNI Cybersec" />
     <meta name="twitter:image" content="img/CyberPic.jpg" />
-    <meta name="twitter:description" content="About Me" />
+    <meta name="twitter:description" content="About Us" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <title>About Me</title>
+    <title>About Us</title>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -90,7 +90,7 @@
           <div class="row">
             <div class="col-lg-12">
               <h1 class="wow fadeInUp" data-wow-delay="0.3s">
-                <i class="fas fa-info-circle"></i> About Me
+                <i class="fas fa-info-circle"></i> About Us
               </h1>
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fas fa-user-ninja"></i> TNI Cybersec
