--- a/common/navbar.html
+++ b/common/navbar.html
@@ -19,8 +19,8 @@
       ></a>
     </li>
     <li>
-      <a href="aboutme.html" class="borderFade"
-        ><i class="fas fa-info-circle"></i> About Me<span></span
+      <a href="aboutus.html" class="borderFade"
+        ><i class="fas fa-info-circle"></i> About Us<span></span
       ></a>
     </li>
     <li>
@@ -56,7 +56,7 @@
       ></a>
     </li>
     <li>
-      <a href="aboutme.html" class="borderFade"
+      <a href="aboutus.html" class="borderFade"
         ><i class="fas fa-info-circle"></i> About Me<span></span
       ></a>
     </li>
