Fix Issues link
https://github.com/TNI-Cybersec/tni-cybersec.github.io ➡ https://github.com/TNI-Cybersec/tni-cybersec.github.io/issues

--- a/aboutus.html
+++ b/aboutus.html
@@ -147,7 +147,7 @@
                 <i class="far fa-window-maximize"></i> Web Information
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                <i class="fas fa-cogs"></i> 4.0.2
+                <i class="fas fa-cogs"></i> 4.0.8
                 <span class="badge badge-warning">2022 BETA</span>
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
@@ -159,7 +159,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io')"
+                onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/issues')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
