--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="hero">
               <div class="centered">
                 <h1 class="wow fadeInUp" data-wow-delay="0.1s">
-                  <i class="fas fa-info-circle"></i> About Me
+                  <i class="fas fa-info-circle"></i> About Us
                 </h1>
               </div>
             </div>
