Edit page title

--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="About Us" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <title>About Us</title>
+    <title>TNI Cybersec | About Us</title>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
