--- a/activities.html
+++ b/activities.html
@@ -28,7 +28,7 @@
     <meta name="twitter:description" content="Activities" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <title>Activities</title>
+    <title>TNI Cybersec | Activities</title>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
