--- a/cybersec.html
+++ b/cybersec.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Cybersec" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <title>Cybersec</title>
+    <title>TNI Cybersec | Cybersec</title>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
