--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <title>TNI Cybersec</title>
+    <title>TNI Cybersec | Home</title>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
