--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="TNI Cybersec" content="404" />
 
-    <title>404 Page not found</title>
+    <title>TNI Cybersec | 404 Page not found</title>
 
     <!-- stylesheet -->
     <!-- stylesheet -->
