--- a/termsofservice.html
+++ b/termsofservice.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Terms of service" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <title>Terms of service</title>
+    <title>TNI Cybersec | Terms of Service</title>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -90,7 +90,7 @@
           <div class="row">
             <div class="col-lg-12">
               <h1 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-info-circle"></i> Terms of service
+                <i class="fas fa-info-circle"></i> Terms of Service
               </h1>
               <p class="wow fadeInUp" data-wow-delay="0.3s">
                 <i class="fas fa-info-circle"></i>
