Update about picture

--- a/aboutus.html
+++ b/aboutus.html
@@ -104,7 +104,7 @@
                 as="image"
                 class="wow fadeInUp center border border-light round"
                 data-wow-delay="0.6s"
-                src="img/CyberPic.jpg"
+                src="img/CyberPic_coop.png"
                 alt="Owner"
                 style="width: 100%; height: auto"
               />
