Fix link "aboutme.html" ➡️ "aboutus.html"

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             as="image"
             class="col-lg-12 type type3 border border-light wow fadeInUp circleScaleBtn"
             data-wow-delay="0.2s"
-            onclick="location.href='aboutme.html'"
+            onclick="location.href='aboutus.html'"
           >
             <div class="hero">
               <div class="centered">
