--- a/common/footer.html
+++ b/common/footer.html
@@ -64,7 +64,7 @@
             type="button"
             onclick="location.href='termsofservice.html'"
           >
-            <i class="fas fa-info-circle"></i> Terms of service
+            <i class="fas fa-info-circle"></i> Terms of Service
           </p>
         </div>
       </div>
