--- a/cybersec.html
+++ b/cybersec.html
@@ -100,7 +100,7 @@
                 <i class="fa-solid fa-question"></i> Cybersec คืออะไร
               </h3>
               <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
-                <span class="badge badge-light">👨‍🏫 knowledge</span>
+                <span class="badge badge-light">👨‍🏫 Knowledge</span>
               </h4>
               <img
               rel="preload"
