--- a/cybersec.html
+++ b/cybersec.html
@@ -113,7 +113,7 @@
             />
             <br />
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                Cybersec หรือ Cyber Security คือ การนาเครื่องมือทางด้านเทคโนโลยีและกระบวนการที่รวมถึง 
+                Cybersec หรือ Cyber Security คือ การนำเครื่องมือทางด้านเทคโนโลยีและกระบวนการที่รวมถึง 
                 วิธีการปฏิบัติที่ถูกออกแบบไว้เพื่อป้องกันและรับมือที่อาจจะถูกโจมตีเข้ามายังอุปกรณ์เครือข่าย, โครงสร้างพื้นฐานทางสารสนเทศ, 
                 ระบบหรือโปรแกรมที่อาจจะเกิดความเสียหายจากการที่ถูกเข้าถึงจากบุคคลที่สามโดยไม่ได้รับอนุญาต
               </p>
