--- a/common/navbar.html
+++ b/common/navbar.html
@@ -57,7 +57,7 @@
     </li>
     <li>
       <a href="aboutus.html" class="borderFade"
-        ><i class="fas fa-info-circle"></i> About Me<span></span
+        ><i class="fas fa-info-circle"></i> About Us<span></span
       ></a>
     </li>
     <li>
