--- a/cybersec.html
+++ b/cybersec.html
@@ -278,6 +278,37 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
+
+              <br />
+
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+                💡 Know-how
+              </h2>
+              <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
+                <span class="badge badge-light">👨‍🏫 Knowledge</span>
+              </h4>
+              <img
+                rel="preload"
+                as="image"
+                class="wow fadeInUp center border border-light round"
+                data-wow-delay="0.5s"
+                src="img/Know-how.png"
+                alt="For Beginner"
+                style="width: 100%; height: auto"
+              />
+              <br />
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                ความรู้ด้าน Cyber Security ที่เราแนะนำ
+              </p>
+              <button
+                type="button"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/knowhow.md')"
+                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.5s"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
+                more!
+              </button>
             </div>
           </div>
         </div>
