--- a/common/footer.html
+++ b/common/footer.html
@@ -55,6 +55,7 @@
                 <i class="fab fa-facebook-messenger"></i>
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-discord"></i>
+                <i class="fa-brands fa-github"></i>
                 |
                 <i class="fa-solid fa-envelope"></i>
               </p>
