--- a/common/social-card.html
+++ b/common/social-card.html
@@ -13,6 +13,9 @@
         </h4>
       </div>
       <div class="modal-body">
+        <h4 class="tooltip-contact">
+          <i class="fa-solid fa-users-rectangle"></i> Our socials
+        </h4>
         <button
           type="button"
           onclick="window.open('https://m.me/TNICybersec')"
@@ -35,6 +38,14 @@
           class="btn btn-outline-dark btn-lg btn-block"
         >
           <i class="fab fa-discord"></i> TNI Cybersec
+        </button>
+        <br />
+        <button
+          type="button"
+          onclick="window.open('https://github.com/TNI-Cybersec')"
+          class="btn btn-outline-dark btn-lg btn-block"
+        >
+        <i class="fa-brands fa-github"></i> TNI Cybersec
         </button>
 
         <hr />
